--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,3 +38,6 @@ jobs:
         resourceGroupName: ${{ secrets.AZURE_RG }}
         template: ./src/InfrastructureAsCode/main.bicep
         parameters: environment=${{ github.event.inputs.appenv }}
+				scope: resourceGroup
+				enable-AzPSSession: true
+				
