--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,7 +35,7 @@ jobs:
       uses: azure/arm-deploy@v1
       with:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        resourceGroupName: ${{ secrets.AZURE_RG }}
+        resourceGroupName: ${{ vars.AZURE_RG }}
         template: ./src/InfrastructureAsCode/main.bicep
         parameters: environment=${{ github.event.inputs.appenv }}
         scope: resourcegroup
