--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -30,8 +30,8 @@ jobs:
       with:
         languages: ${{ matrix.language }}
 
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+    - name: Build
+      run: dotnet build --configuration Release ./src/Application/src/RazorPagesTestSample/RazorPagesTestSample.csproj
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
